--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,35 @@
-alembic==1.4.2
-appdirs==1.4.4
-astroid==2.0.4
-autopep8==1.5.1
+argon2-cffi==20.1.0
+asgiref==3.2.10
 bcrypt==3.1.7
-beautifulsoup4==4.8.2
-blinker==1.4
-blis==0.2.4
-certifi==2020.4.5.1
+certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
-ChatterBot==1.0.5
-click==7.1.1
-colorama==0.4.3
-coverage==5.0.4
-cryptography==2.9
-cycler==0.10.0
-cymem==2.0.2
-defusedxml==0.5.0
-device-detector==0.10
-distlib==0.3.1
-dj-database-url==0.5.0
-Django==2.2
-django-allauth==0.37.1
-django-cors-headers==2.4.0
-django-heroku==0.3.1
-django-rest-auth==0.9.3
-djangorestframework==3.8.2
-dnspython==1.16.0
-eventlet==0.25.1
-fabric==2.5.0
-filelock==3.0.12
-Flask==1.1.2
-Flask-Bcrypt==0.7.1
-Flask-Caching==1.8.0
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Migrate==2.5.3
-Flask-MySQLdb==0.2.0
-flask-mysqlpool==1.0.4
-Flask-SocketIO==4.2.1
-Flask-SQLAlchemy==2.4.1
-Flask-SSLify==0.1.5
-Flask-User==1.0.2.2
-Flask-WTF==0.14.3
-googlemaps==4.2.2
-greenlet==0.4.15
-gunicorn==19.7.1
-idna==2.9
-importlib-metadata==2.0.0
-invoke==1.4.1
-isort==4.3.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-jsonschema==2.6.0
-kiwisolver==1.2.0
-lazy-object-proxy==1.3.1
-Mako==1.1.2
-MarkupSafe==1.1.1
-mathparse==0.1.2
-matplotlib==3.2.1
-mccabe==0.6.1
-monotonic==1.5
-murmurhash==1.0.2
-mysql-connector-python==8.0.19
-mysqlclient==1.4.2.post1
-nltk==3.4
-numpy==1.16.2
-oauthlib==2.1.0
-pandas==1.0.3
-paramiko==2.7.1
-passlib==1.7.2
-Pillow==7.1.1
-Pint==0.9
-pipenv==2020.8.13
-plac==0.9.6
-preshed==2.0.1
-protobuf==3.6.1
-psycopg2==2.8.6
-pycodestyle==2.5.0
+cryptography==3.0
+defusedxml==0.7.0rc1
+Django==3.0.8
+django-crispy-forms==1.9.2
+djangorestframework==3.11.1
+Faker==4.1.1
+idna==2.10
+importlib-metadata==1.7.0
+Markdown==3.2.2
+oauthlib==3.1.0
+Pillow==7.2.0
 pycparser==2.20
-pydialogflow-fulfillment==0.1.3
-pylint==2.1.1
-pymongo==3.7.2
-PyMySQL==0.9.3
-PyNaCl==1.3.0
-pyodbc==4.0.30
-pyparsing==2.4.7
-python-dateutil==2.7.5
-python-editor==1.0.4
-python-engineio==3.12.1
-python-socketio==4.5.0
-python3-openid==3.1.0
-pytz==2018.5
-PyYAML==5.1
-redis==3.4.1
-regex==2020.4.4
-requests==2.23.0
-requests-oauthlib==1.0.0
-rq==1.3.0
-scipy==1.4.1
-seaborn==0.10.0
-singledispatch==3.4.0.3
-six==1.14.0
-soupsieve==2.0
-spacy==2.1.3
-SQLAlchemy==1.3.16
-sqlparse==0.3.0
-srsly==0.0.5
-thinc==7.0.4
-timeago==1.0.14
-tqdm==4.31.1
-typed-ast==1.1.0
-urllib3==1.25.9
-virtualenv==20.1.0
-virtualenv-clone==0.5.4
-wasabi==0.2.1
-Werkzeug==1.0.1
-whitenoise==3.3.1
-wrapt==1.10.11
-WTForms==2.2.1
-xlrd==1.2.0
-zipp==3.4.0
+PyJWT==1.7.1
+python-dateutil==2.8.1
+python-social-auth==0.2.1
+python3-openid==3.2.0
+pytz==2020.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+six==1.15.0
+social-auth-app-django==4.0.0
+social-auth-core==3.3.3
+sqlparse==0.3.1
+text-unidecode==1.3
+urllib3==1.25.10
+wincertstore==0.2
+zipp==3.1.0
+django-heroku==0.3.1
+gunicorn==19.7.1
